Se mejoro la seguridad y el codigo en general con spring security para los end points. Ademas ahora se puede mostrar el usuario logeado al dashboard mediante un end point. Y se actualizo la documentacion de las apis.
